--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -190,8 +190,12 @@ message(STATUS "Searching for Boost 1.38+ - done")
 # on windows in the compilation documentation.
 if(WIN32)
   if (MSVC)
-    set(Boost_USE_STATIC_LIBS   ON)
-    set(Boost_USE_MULTITHREADED ON)
+    if (NOT DEFINED Boost_USE_STATIC_LIBS)
+      set(Boost_USE_STATIC_LIBS   ON)
+    endif()
+    if (NOT DEFINED Boost_USE_MULTITHREADED)
+      set(Boost_USE_MULTITHREADED ON)
+    endif()
   endif(MSVC)
 endif(WIN32)
 
